--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,20 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "dotenv": "~4.0.0",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "hbs": "~4.0.1",
-    "mongoose": "~4.13.4",
+    "mongoose": "^4.13.18",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
-    "serve-favicon": "~2.4.5"
+    "passport": "^0.4.0",
+    "passport-local-mongoose": "^5.0.1",
+    "serve-favicon": "~2.4.5",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
